--- a/index.css
+++ b/index.css
@@ -1,4 +1,6 @@
+/*j'ai essayer de donner chaque class un nom representant pour comprendre ce que la class fait juste a partir du nom */
 
+/*le body pour toute chose genral qui se repete*/ 
 body {
     background-color: #FFFFFF;
     font-family: 'Roboto', sans-serif;
@@ -7,8 +9,7 @@ body {
     overflow-x: hidden;
     height: 100%;
 }
-
-
+/*C la bar en haut de la page qui contient le logo youtube les petits 3 bars et lw input(Search) et l icon download et notification et profil*/
 .Navigation-bar {
     width: 100%;
     height: 56px;
@@ -70,7 +71,6 @@ body {
     background-repeat: no-repeat;
     cursor: pointer;
 }
-
 
 .Search-mic {
     height: 40px;
@@ -210,14 +210,13 @@ body {
     border-radius: 50%;
     object-fit: cover;
 }
-
-
+/*tous chose est dans se main sauf la bar en haut de la page(Navigation-bar)*/
 .main {
     display: flex;
     width: 100%;
     height: 640px;
 }
-
+/*la bar a gauche de la page qui contient Historic ,les shorts etc.. */
 .hotbar {
     margin-top: 10px;
     margin-left: 20px;
@@ -268,7 +267,7 @@ i.material-icons {
     font-size: 24px;
     margin-right: 15px;
 }
-
+/*organiser les font, etc..*/
 h1, h2, h3, h4 {
     margin: 0;
     font-weight: 400;
@@ -330,6 +329,7 @@ h4 {
     overflow-x: hidden;
     flex-direction: column;
 }
+/*la bar sous la "Navigation-bar" ou on trouve des genres de contenu suggérer */ 
 .content-bar{
     display: flex;
     width: 1530px;
@@ -377,7 +377,7 @@ h6{
     display: flex;
     height: 400px;
 }
-
+/*les 3 videos dans une seul div */
 .top-videos{
     display: flex;
     width: 100%;
@@ -561,7 +561,7 @@ h6{
     display: flex;
     width: 100%;
 }
-
+/*C l'icon de 3points a cote du titre de la video */
 .more{
     margin-top: 13px;
     display: flex;
@@ -573,7 +573,7 @@ h6{
     justify-self: end;
     rotate: 90deg;
 }
-
+/*C l'icon des Shorts de Youtube  */ 
 .SHORTSlogo{
     display: flex;
     font-weight: 600;
